(Format: Year/Month/Day)
Changes for 0.9.16:
*06/04/24:
   * Fix memory leaks & other errors in Menu code (Simon)
     Screen.cc Slit.cc Toolbar.cc fluxbox.cc MenuCreator.cc FbTk/Menu.cc
   * Use external tabs by default (Simon)
     - they provide a unique look to fluxbox
     - backwards compatible with 0.1.14 ("stable")
     - new users will wonder what they are :)
     Screen.cc
*06/04/23:
   * Fixed typos in new docs (thanks Semushin Slava)
     docs/asciidoc/fluxbox.txt
   * Added support for _NET_WM_ALLOWED_ACTIONS and all the _NET_WM_ACTION_*,
     _NET_WM_STATE_MODAL, _NET_WM_WINDOW_TYPE_SPLASH,
     _NET_RESTACK_WINDOW  (Henrik)
     Ewmh.hh/cc, Window.hh, WinClient.hh, WinClientUtil.hh/cc
   * Reload the apps file on fluxbox reload (Simon)
     Remember.hh/cc fluxbox.cc AtomHandler.hh ClientPattern.hh/cc
   * Update documentation for Next/PrevWindow (Simon / thanks Jonas 
     Koelker), sf.net patch #1474825
     doc/asciidoc/fluxbox.txt
   * Focus singular windows on a workspace (Simon / thanks Jonas Koelker)
     sf.net patch #1474722
     Window.cc
   * Tidy up window cycling, and make linear mode work in order of 
     creation (Thanks Mark Tiefenbruck, mark at tiefenbruck dot org)
     FocusControl.hh/cc
*06/04/22:
   * Fix workspace menu corruption when window title changes (Simon)
     sf.net bug #1113668
     Menu.cc MenuItem.cc
   * Fix crash when toolbar disabled (Simon)
     Slit.hh/cc Screen.cc
   * Couple of memory-based fixes from valgrind (Simon)
     Keys.cc Screen.cc MenuCreator.cc
   * Applied #1467926 and #1458069, minor other changes (Mathias)
     docs/asciidoc/fluxbox.txt
   * static CommandParser could be used after destruction (Simon)
     Fixes sf.net #1474444, segfault when DISPLAY not set
     CommmandParser.hh/cc
   * Minor cosmetic changes, thanks Semushin Slava (php-coder AT ngs ru)
     main.cc Screen.cc util/startfluxbox.in
   * First draft of new docs in docs/asciidoc (Mathias)