@@ -320,7 +320,7 @@ AC_ARG_ENABLE(debug,
   [  --enable-debug          include verbose debugging code [default=no]],
   if test x$enableval = "xyes"; then
     AC_MSG_RESULT([yes])
-    DEBUG="-DDEBUG"
+    DEBUG="-DDEBUG -Wall"
   else
     AC_MSG_RESULT([no])
   fi,
