@@ -1,6 +1,11 @@
 (Format: Year/Month/Day)
 Changes for 0.9.16:
 *06/04/24:
+   * Use -Wall when --enable-debug and some warning fixes 
+     (Simon + thanks Jonas Koelker)
+     configure.in ClockTool.cc main.cc Ewmh.cc Window.cc 
+     PlacementStrategy.hh LayerMenu.hh FbTk/SignalHandler.hh 
+     FbTk/FbWindow.hh
    * Fix memory leaks & other errors in Menu code (Simon)
      Screen.cc Slit.cc Toolbar.cc fluxbox.cc MenuCreator.cc FbTk/Menu.cc
    * Use external tabs by default (Simon)
